--- a/trunk/static/css/rst.css
+++ b/trunk/static/css/rst.css
@@ -213,11 +213,12 @@ pre.address {
   font-size: 100% }
 
 pre.literal-block, pre.doctest-block {
-  margin: 2em ;
+  margin: 5% 0 5% 0 ;
   background-color: #eeeeee;
   padding: 0.5em;
   overflow: auto;
   font-family: "Courier New", Courier, monospace;
+  width: 90%;
   }
 
 span.classifier {
